# serializer version: 1
# name: test_multi_line_spoiler
  '''
  <aside class="spoiler-block">
  <blockquote class="spoiler-body" data-block="spoiler">
  <p>Sit amet elit.</p>
  <p>Another line.</p>
  </blockquote>
  <div class="spoiler-overlay" data-noquote="1"><button class="spoiler-reveal" type="button"></button></div>
  </aside>
  '''
# ---
# name: test_single_line_spoiler
  '''
  <aside class="spoiler-block">
  <blockquote class="spoiler-body" data-block="spoiler">
  <p>Daenerys and Jon live happily ever after!</p>
  </blockquote>
  <div class="spoiler-overlay" data-noquote="1"><button class="spoiler-reveal" type="button"></button></div>
  </aside>
  '''
# ---
# name: test_spoiler_can_contain_bbcode_or_markdown
  '''
  <aside class="spoiler-block">
  <blockquote class="spoiler-body" data-block="spoiler">
  <p>Sit <strong>amet</strong> <u>elit</u>.</p>
  </blockquote>
  <div class="spoiler-overlay" data-noquote="1"><button class="spoiler-reveal" type="button"></button></div>
  </aside>
  '''
# ---
# name: test_spoilers_can_be_nested
  '''
  <aside class="spoiler-block">
  <blockquote class="spoiler-body" data-block="spoiler">
  <p>Sit amet elit.</p>
  <aside class="spoiler-block">
  <blockquote class="spoiler-body" data-block="spoiler">
  <p>Nested spoiler</p>
  </blockquote>
  <div class="spoiler-overlay" data-noquote="1"><button class="spoiler-reveal" type="button"></button></div>
  </aside>
  </blockquote>
  <div class="spoiler-overlay" data-noquote="1"><button class="spoiler-reveal" type="button"></button></div>
  </aside>
  '''
# ---
# name: test_spoilers_can_contain_hr_markdown
  '''
  <aside class="spoiler-block">
  <blockquote class="spoiler-body" data-block="spoiler">
  <p>Sit amet elit.</p>
  <hr />
  <p>Another line.</p>
  </blockquote>
  <div class="spoiler-overlay" data-noquote="1"><button class="spoiler-reveal" type="button"></button></div>
  </aside>
  '''
# ---
